<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/bg_colour"
    tools:context=".MainActivity" >

    <LinearLayout
       android:layout_width="@dimen/aug_box_width"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_gravity="center" >

        <LinearLayout
            android:layout_width="@dimen/aug_box_width"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="@dimen/box_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/box_colour"
                android:orientation="vertical"
                android:padding="@dimen/sum_button_margin" >

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:shadowColor="#ffffff"
                    android:singleLine="true"
                    android:text="@string/interval"
                    android:textColor="@color/def"
                    android:textSize="15sp" />
            </LinearLayout>

            <View
                android:layout_width="5dp"
                android:layout_height="fill_parent"
                android:layout_marginTop="5dp"
                android:background="@color/shadow" />
        </LinearLayout>

	    <LinearLayout
	        android:layout_width="@dimen/box_width"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:background="@color/box_colour"
	        android:padding="@dimen/sum_button_margin"
	        android:layout_gravity="center" >
	        
		    <TextView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center_horizontal"
		        android:shadowColor="#ffffff"
		        android:singleLine="true"
		        android:text="@string/interval"
		        android:textColor="@color/def"
		        android:textSize="15sp"
		        android:id="@+id/interval" />
	    </LinearLayout>
	    
	    <View
	            android:layout_width="5dp"
	            android:layout_height="fill_parent"
	            android:layout_marginTop="5dp"
	            android:background="@color/shadow"/>
    </LinearLayout>
    
    <LinearLayout
       android:layout_width="@dimen/aug_box_width"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_gravity="center" >
	    <View
	            android:layout_width="fill_parent"
	            android:layout_height="5dp"
	            android:layout_marginLeft="5dp"
	            android:background="@color/shadow"/>
    </LinearLayout>

    <TextView
        android:id="@+id/spacer1"
        android:layout_width="match_parent"
        android:layout_height="21dp"
        android:gravity="center_horizontal"
        android:shadowColor="#ffffff"
        android:singleLine="true"
        android:text=""
        android:textColor="@color/def"
        android:textSize="20sp" />
    
    <LinearLayout
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:orientation="horizontal"
	       android:layout_gravity="center" > 
	       <LinearLayout
		       android:layout_width="@dimen/sum_box_width"
		       android:layout_height="wrap_content"
		       android:orientation="vertical"
		       android:layout_gravity="center" >
			  <LinearLayout
		       android:layout_width="@dimen/sum_box_width"
		       android:layout_height="wrap_content"
		       android:orientation="horizontal"
		       android:layout_gravity="center" >    
			    <LinearLayout
			        android:layout_width="@dimen/sum_box_width"
			        android:layout_height="wrap_content"
			        android:orientation="vertical"
			        android:background="@color/box_colour"
			        android:layout_gravity="center"
			        android:padding="@dimen/sum_button_margin" >
			
			        <TextView
			            android:id="@+id/budgetName"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:gravity="center_horizontal"
			            android:shadowColor="#ffffff"
			            android:singleLine="true"
			            android:text="@string/budget_name"
			            android:textColor="@color/def"
			            android:textSize="15sp" />
			
			        <TextView
			            android:id="@+id/budgetValue"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:gravity="center_horizontal"
			            android:shadowColor="#ffffff"
			            android:singleLine="true"
			            android:text="@string/budget"
			            android:textColor="@color/def"
			            android:textSize="18sp" />
			    </LinearLayout>

			    </LinearLayout>
		    
		    <LinearLayout
		       android:layout_width="@dimen/sum_box_width"
		       android:layout_height="wrap_content"
		       android:orientation="vertical"
		       android:layout_gravity="center" >
			    <View
			            android:layout_width="fill_parent"
			            android:layout_height="5dp"
			            android:layout_marginLeft="5dp"
			            android:background="@color/shadow"/>
		    </LinearLayout>
		    </LinearLayout>

	    			    <View
			            android:layout_width="5dp"
			            android:layout_height="fill_parent"
			            android:layout_marginTop="5dp"
			            android:background="@color/shadow"/>
	       <View
			            android:layout_width="15dp"
			            android:layout_height="fill_parent"
			            android:layout_marginLeft="5dp"
			            android:background="@color/bg_colour"/>
	       
	       <LinearLayout
			       android:layout_width="@dimen/sum_box_width"
			       android:layout_height="wrap_content"
			       android:orientation="vertical"
			       android:layout_gravity="center" >
		      <LinearLayout
		       android:layout_width="@dimen/sum_box_width"
		       android:layout_height="wrap_content"
		       android:orientation="horizontal"
		       android:layout_gravity="center" >
			     <LinearLayout
			     android:layout_width="@dimen/sum_box_width"
			     android:layout_height="wrap_content"
			     android:orientation="vertical"
			     android:background="@color/box_colour"
			     android:layout_gravity="center"
			     android:padding="@dimen/sum_button_margin" >
			        
				     <TextView
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:gravity="center_horizontal"
				        android:shadowColor="#ffffff"
				        android:singleLine="true"
				        android:text="@string/spent_text"
				        android:textColor="@color/def"
				        android:textSize="15sp"
				        android:id="@+id/spentName" />
				
				    <TextView
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:gravity="center_horizontal"
				        android:shadowColor="#ffffff"
				        android:singleLine="true"
				        android:text="@string/spent"
				        android:textColor="@color/def"
				        android:textSize="18sp"
				        android:id="@+id/spentValue" />
				   </LinearLayout>
				   

			   </LinearLayout>
			    
		        <LinearLayout
			       android:layout_width="@dimen/sum_box_width"
			       android:layout_height="wrap_content"
			       android:orientation="vertical"
			       android:layout_gravity="center" >
			    <View
		            android:layout_width="fill_parent"
		            android:layout_height="5dp"
		            android:layout_marginLeft="5dp"
		            android:background="@color/shadow"/>
		    </LinearLayout>
		    
		    </LinearLayout>
		    			     	    <View
			            android:layout_width="5dp"
			            android:layout_height="fill_parent"
			            android:layout_marginTop="5dp"
			            android:background="@color/shadow"/>
	   </LinearLayout>
	        
      <TextView
          android:id="@+id/spacer3"
          android:layout_width="match_parent"
          android:layout_height="20dp"
          android:gravity="center_horizontal"
          android:shadowColor="#ffffff"
          android:singleLine="true"
          android:text=""
          android:textColor="@color/def"
          android:textSize="30sp" />
      
      
      <LinearLayout
	       android:layout_width="@dimen/aug_box_width"
	       android:layout_height="wrap_content"
	       android:orientation="vertical"
	       android:layout_gravity="center_horizontal" >
	      <LinearLayout
	       android:layout_width="@dimen/aug_box_width"
	       android:layout_height="fill_parent"
	       android:orientation="horizontal"
	       android:layout_gravity="center_horizontal" >
	
	         <LinearLayout
	             android:layout_width="@dimen/box_width"
	             android:layout_height="wrap_content"
	             android:layout_gravity="center"
	             android:background="@color/box_colour"
	             android:orientation="vertical"
	             android:padding="@dimen/sum_button_margin">
	
	             <TextView
	                 android:id="@+id/list"
	                 android:layout_width="match_parent"
	                 android:layout_height="wrap_content"
	                 android:gravity="center_horizontal"
	                 android:shadowColor="#ffffff"
	                 android:singleLine="true"
	                 android:text="@string/list_title"
	                 android:textColor="@color/def"
	                 android:textSize="15sp" />
	             
	             <ScrollView
	                 android:layout_width="fill_parent"
	        			android:layout_height="wrap_content"
	        			android:padding="18dp"
	        			android:clipToPadding="false"
	        			android:background="@color/bg_colour">
	                 <LinearLayout
	                    android:id="@+id/scrollingList"
	                    android:layout_width="fill_parent"
	        			android:layout_height="wrap_content"
	         			android:orientation="vertical"
	         			android:layout_gravity="center_horizontal">
	                 </LinearLayout>
	             </ScrollView>
	         </LinearLayout>
	
	         <View
	             android:layout_width="5dp"
	             android:layout_height="fill_parent"
	             android:layout_marginTop="5dp"
	             android:background="@color/shadow" />
	     </LinearLayout>
	     

		    <View
		            android:layout_width="fill_parent"
		            android:layout_height="5dp"
		            android:layout_marginLeft="5dp"
		            android:background="@color/shadow"/>

	  </LinearLayout>      
</LinearLayout>