<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/bg_colour"
    android:id="@+id/main_activity"
    android:gravity="center_horizontal"
    tools:context=".SetupActivity" >
	
    <LinearLayout
		android:layout_width="289dp"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
	    <LinearLayout
	        android:layout_width="284dp"
	        android:layout_height="wrap_content"
	        android:background="@color/box_colour"
	        android:orientation="vertical"
	        android:padding="@dimen/button_margin" >
		    <TextView
		        android:id="@+id/budget_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/budget_label"
		        android:padding="@dimen/button_margin"
		        android:textColor="@color/def" />
			
		    <LinearLayout
		        android:layout_width="284dp"
		        android:layout_height="wrap_content"
		        android:background="@color/box_colour"
		        android:orientation="horizontal"
		        android:padding="@dimen/button_margin" >
				
			    <EditText
			        android:id="@+id/editText1"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:layout_weight=".9"
			        android:inputType="numberDecimal|numberSigned"
			        android:textColor="@color/def"
			        android:textCursorDrawable="@null">
			
			        <requestFocus />
			    </EditText>
			    
			    <Button
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:text="@string/button_id"
					android:id="@+id/enter2"
					android:textColor="@color/def" />
			  </LinearLayout>
	    </LinearLayout>
	    
	    <View
			android:layout_width="5dp"
			android:layout_height="fill_parent"
			android:layout_marginTop="5dp"
			android:background="@color/shadow"/>
    </LinearLayout>
    <!-- BOTTOM SHADOWQ -->

    <View
        android:layout_width="279dp"
        android:layout_height="5dp"
        android:layout_marginLeft="5dp"
        android:background="@color/shadow" />
	    
	<!-- SPACER 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1-->
	<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:shadowColor="#ffffff"
        android:singleLine="true"
        android:text=""
        android:textColor="@color/def"
        android:textSize="30sp"
        android:id="@+id/spacer1" />    
	  
	
	<!-- DATE BUTTON -->
	    
	<LinearLayout
		android:layout_width="289dp"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
	    <LinearLayout
	        android:layout_width="284dp"
	        android:layout_height="wrap_content"
	        android:background="@color/box_colour"
	        android:orientation="vertical"
	        android:padding="@dimen/button_margin" >
		    <TextView
		        android:id="@+id/date_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="End Date"
		        android:padding="@dimen/button_margin"
		        android:textColor="@color/def" />
			
		    <LinearLayout
		        android:layout_width="284dp"
		        android:layout_height="wrap_content"
		        android:background="@color/box_colour"
		        android:orientation="horizontal"
		        android:padding="@dimen/button_margin" >
			<TextView
		        android:id="@+id/interval"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:text="@string/donate_label"
		        android:textColor="@color/def"
		        android:padding="@dimen/button_margin" 
		        android:layout_weight="0.5"
		        android:textSize="20sp"/>	
			    
		    <Button
		        android:id="@+id/editDateButton"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/editDateButton"
		        android:textColor="@color/def" />
			  </LinearLayout>
	    </LinearLayout>
	    
	    <View
			android:layout_width="5dp"
			android:layout_height="fill_parent"
			android:layout_marginTop="5dp"
			android:background="@color/shadow"/>
    </LinearLayout>
    <!-- BOTTOM SHADOWQ -->
    <View
		android:layout_width="279dp"
		android:layout_height="5dp"
		android:layout_marginLeft="5dp"
		android:background="@color/shadow"/>


    
    
    <!-- SPACER 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1-->
	<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:shadowColor="#ffffff"
        android:singleLine="true"
        android:text=""
        android:textColor="@color/def"
        android:textSize="30sp"
        android:id="@+id/spacer2" />  
    
    
    <!-- DONATE -->
    
    <LinearLayout
		android:layout_width="289dp"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
	    <LinearLayout
	        android:layout_width="284dp"
	        android:layout_height="wrap_content"
	        android:background="@color/box_colour"
	        android:orientation="vertical"
	        android:padding="@dimen/button_margin" >
	        <TextView
		        android:id="@+id/donate_label"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/donate_label"
		        android:textColor="@color/def"
		        android:padding="@dimen/button_margin" />
			
		    <LinearLayout
		        android:layout_width="284dp"
		        android:layout_height="wrap_content"
		        android:background="@color/box_colour"
		        android:orientation="horizontal"
		        android:padding="@dimen/button_margin" >
		
			<RadioGroup
			    android:id="@+id/auto_donate"
			    android:orientation="horizontal"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" >
			
			    <RadioButton
			        android:id="@+id/radio0"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:checked="true"
			        android:text="Yes"
			        android:textColor="@color/def" />
		
		    	<RadioButton
			        android:id="@+id/radio1"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="No"
			        android:textColor="@color/def" />
			    
			</RadioGroup>
			  </LinearLayout>
	    </LinearLayout>
	    
	    <View
			android:layout_width="5dp"
			android:layout_height="fill_parent"
			android:layout_marginTop="5dp"
			android:background="@color/shadow"/>
    </LinearLayout>
    <!-- BOTTOM SHADOWQ -->
    <View
		android:layout_width="279dp"
		android:layout_height="5dp"
		android:layout_marginLeft="5dp"
		android:background="@color/shadow"/>
    
    




</LinearLayout>